--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "ethers": "^6.13.5",
     "hardhat": "^2.22.17",
     "mocha": "^11.0.1"
+  },
+  "dependencies": {
+    "web-vitals": "^4.2.4"
   }
 }
