--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,6 @@ node_modules
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
  520d3ba (Initial commit)
+.env
+.env
+.env
