--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "chai": "^4.5.0",
     "dotenv": "^16.4.7",
-    "ethers": "^6.13.5",
     "hardhat": "^2.22.17",
     "mocha": "^11.0.1"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "ethers": "^5.7.0",
     "web-vitals": "^4.2.4"
   }
 }
