--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "chai": "^4.5.0",
     "dotenv": "^16.4.7",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
     "ethers": "^6.13.5",
+    "globals": "^15.14.0",
     "hardhat": "^2.22.18",
-    "mocha": "^11.0.1"
+    "mocha": "^11.0.1",
+    "typescript-eslint": "^8.23.0"
   },
   "dependencies": {
     "web-vitals": "^4.2.4"
