--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "blockchain-course",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
-  "main": "hardhat.config.mjs",
+  "main": "hardhat.config.js",
   "scripts": {
-    "test": "npx hardhat test"
+    "test": "echo\"Error: no test specified\"&& exit 1"
   },
   "author": "",
   "license": "ISC",
